<resources>
    <string name="app_name">TheBrain</string>
    <string name="password">PASSWORD</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">login</string>
    <string name="no_account">Don\'t you have an account?</string>
    <string name="welcome_text">Welcome To BTDS</string>
    <string name="continue_text">Login to continue</string>
    <string name="already_have_account">Already have account?</string>
    <string name="fill_info">Please fill the information</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">FULL NAME</string>
    <string name="phone">PHONE</string>
    <string name="email">EMAIL</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="AppText">Brain Tumor Detection System</string>
    <string name="brain_alchemy">Brain Alchemy</string>
    <string name="forgot_title">Forgot Password?</string>
    <string name="account_email">Enter the email address associated with your account</string>
    <string name="alert_user">Check your email, link has been sent to you.</string>
    <string name="submit">Submit</string>
    <string name="back">back</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="brain_logo">brain logo</string>
    <string name="select_role">Select Role</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="upload">Upload</string>
    <string name="username">USERNAME</string>
    <string name="qualification">QUALIFICATION</string>
    <string name="gender">Gender</string>
    <string name="title">Title</string>
    <string name="doctor">Doctor</string>
    <string name="role">ROLE</string>
    <string name="status">Status</string>
    <string name="reference">Reference ID</string>
    <string name="specialization">SPECIALIZATION</string>
    <string name="cnic">CNIC</string>
    <string name="city">CITY</string>
    <string name="street">STREET</string>
    <string name="select_gender">Select Gender</string>
    <string name="age">AGE</string>
    <string name="logout">LOGOUT</string>
    <string name="comments">Comments</string>
    <string name="write_a_comment">Write a Comment</string>
    <string name="post_a_comment">Post</string>
    <string name="view_doctors_list">View Doctors List</string>
    <string name="view_my_patient_list">View My Patient List</string>
    <string name="view_profile">View Profile</string>
    <string name="upload_mri_image">Upload MRI Image</string>
    <string name="view_my_sessions">View My Sessions</string>
    <string name="patient">Patient</string>
    <string name="close_the_session_window">Close the session window</string>
    <string name="my_sessions">My Sessions</string>
    <string name="change_photo">Change Photo</string>
    <string name="save">SAVE</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="close_window">Save Window</string>
    <string name="prediction_result">prediction Result</string>
    <string name="add_mri_image">add_mri_image</string>
    <string name="upload_mri">Upload MRI</string>
    <string name="add_user">Add User</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="refer_patient_to_doctor">Refer Patient To Doctor</string>
    <string name="show_result">Do you want to show result to patient</string>
    <string name="reply">Reply</string>
    <string name="my_session">My Session</string>
    <string name="fullname">Full Name:</string>
    <string name="phoneno">Phone #:</string>
    <string name="emailId">Email:</string>
    <string name="user_data">User Data</string>
    <string name="no_image">No MRI Uploaded</string>
    <string name="tumor_detector">Brain Tumor Detector</string>
</resources>