<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_color_primary"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="289dp"
            android:layout_height="174dp"
            android:layout_gravity="center"
            android:contentDescription="@string/brain_logo"
            android:src="@drawable/login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/baumans"
            android:text="@string/welcome_text"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/continue_text"
            android:textColor="#A0A3A3"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:textStyle="bold"
            android:layout_marginStart="50dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:id="@+id/email"
            android:hint="@string/email"
            android:textSize="12sp"
            app:boxStrokeColor="@color/custom_color_background"
            android:textColorHint="@color/custom_color_background"
            app:hintTextColor="@color/custom_color_background"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:startIconDrawable="@drawable/ic_person"
            app:startIconTint="@color/custom_color_background">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@color/custom_color_background"
                android:textColor="@color/custom_color_background"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/password"
            android:textColorHint="@color/custom_color_background"
            android:textSize="12sp"
            app:boxStrokeColor="@color/custom_color_background"
            app:counterTextColor="@color/custom_color_background"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/custom_color_background"
            app:hintTextColor="@color/custom_color_background"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/custom_color_background"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/custom_color_background">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/custom_color_background"
                android:textCursorDrawable="@color/custom_color_background" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@drawable/button"
            android:textColor="@color/custom_color_background"
            android:text="@string/login"
            android:textSize="10sp"
            android:onClick="Login"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/baumans"
            app:backgroundTint="@color/custom_color_secondary"/>

        <TextView
            android:id="@+id/forgotpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:fontFamily="@font/baumans"
            android:text="@string/forgot_password"
            android:textColor="@color/custom_color_secondary"
            android:textSize="15sp"
            android:onClick="ForgotPassword"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textSize="15sp"
                android:textColor="@color/custom_color_background"
                android:fontFamily="@font/baumans"/>
            <TextView
                android:id="@+id/singupText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/no_account"
                android:layout_toRightOf="@id/no_account"
                android:text="@string/sign_up"
                android:textSize="15sp"
                android:textStyle="bold"
                android:onClick="SignUp"
                android:layout_marginStart="5dp"
                android:textColor="@color/custom_color_secondary"
                android:fontFamily="@font/baumans"
                android:layout_marginLeft="5dp" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>