<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:civ_border_width="1dp"
        app:civ_border_color="@color/custom_color_text_primary"
        android:id="@+id/prof_img" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_toEndOf="@id/prof_img"
        android:layout_toRightOf="@id/prof_img"
        android:layout_toLeftOf="@id/delete"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_toStartOf="@id/delete">

        <TextView
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:fontFamily="@font/baumans"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/specialization"
            android:fontFamily="@font/baumans"
            android:text="@string/title"
            android:textSize="12sp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/delete"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_delete"
        android:layout_marginTop="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:tint="@color/design_default_color_error"
        android:contentDescription="@string/delete" />

</RelativeLayout>