<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/patient_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:civ_border_width="1dp"
        app:civ_border_color="@color/custom_color_text_primary" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/patient_img"
        android:layout_toLeftOf="@id/refer"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/full_name"
        android:textStyle="bold"
        android:fontFamily="@font/baumans"
        android:layout_toEndOf="@id/patient_img"
        android:layout_toStartOf="@id/refer" />

    <ImageView
        android:id="@+id/refer"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/refer_to"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/reference"
        android:layout_toLeftOf="@id/delete"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@id/delete" />

    <ImageView
        android:id="@+id/delete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_delete"
        app:tint="@color/design_default_color_error"
        android:layout_alignParentEnd="true" />

</RelativeLayout>