<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/custom_color_background"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/pat_dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_toEndOf="@+id/pat_dp"
                android:layout_toRightOf="@+id/pat_dp"
                android:text="@string/full_name"
                android:textColor="@color/custom_color_primary"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/baumans"/>

            <TextView
                android:id="@+id/pat_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patient"
                android:layout_toEndOf="@id/pat_dp"
                android:layout_below="@id/name"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:textColor="@color/custom_color_primary"
                android:fontFamily="@font/baumans"
                android:layout_toRightOf="@id/pat_dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/button"
                android:fontFamily="@font/baumans"
                android:text="@string/logout"
                android:textColor="@color/custom_color_background"
                android:textSize="10sp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                app:backgroundTint="@color/custom_color_secondary"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:layout_below="@+id/appbar">

        <RelativeLayout
            android:id="@+id/my_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_corner"
            android:gravity="center">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/custom_color_primary"
                android:src="@drawable/ic_person"
                app:tint="@color/custom_color_background" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img"
                android:gravity="center"
                android:background="@color/custom_color_primary"
                android:text="@string/view_profile"
                android:textColor="@color/custom_color_background"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/my_sessions"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_corner"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/my_profile">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/custom_color_primary"
                android:src="@drawable/ic_sessions"
                app:tint="@color/custom_color_background" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img2"
                android:background="@color/custom_color_primary"
                android:text="@string/view_my_sessions"
                android:textColor="@color/custom_color_background"
                android:textSize="15sp"
                android:gravity="center"/>

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>